# advanced-prompting-engine

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: pre-release.md  release.md  research-semantic-improvement.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
Documentation/Temporary/Execution/: Results-V2Rebuild.md  Roadmap-V2Rebuild.md  WorkEffort-V2Rebuild.md
docs/: CONSTRUCT-INTEGRATION.md  CONSTRUCT-v2-questions.md  CONSTRUCT-v2.md  CONSTRUCT.md  DESIGN.md  GEOMETRY-NOTES.md  cc_genui_20260416_195030_glove_upgrade_analysis.html  cc_genui_20260420_200730_face_importance_ranking.html
docs/adr/: 001-networkx-as-graph-engine.md  002-ten-axis-philosophical-manifold.md  002-twelve-axis-philosophical-manifold.md  003-three-tool-external-surface.md  004-single-process-stdio-deployment.md  005-numpy-sole-additional-dependency.md  006-canonical-user-data-separation.md  007-single-pass-pipeline-with-multi-pass-orchestrator.md  008-tag-tfidf-intent-parsing.md  009-grid-structured-schema-layer.md  010-construct-as-canonical-content.md  011-nexus-gem-spoke-architecture.md  012-spoke-behavioral-signature.md  013-bge-embedding-source.md  014-directional-resonance.md
docs/specs/: 01-graph-schema.md  02-grid-mechanics.md  03-canonical-content.md  03a-source-questions.md  04-sqlite-schema.md  05-mathematical-operations.md  06-pipeline-stages.md  07-nexus-gem-computation.md  08-spoke-central-gem.md  09-caching-lifecycle.md  10-mcp-server-surface.md  11-multi-pass-orchestration.md  12-data-integrity.md  semantic-bridge-algorithms.md
scripts/: benchmark_8texts.py  build_semantic_bridge.py  expand_pole_synonyms.py  run.sh  setup.sh
skills/prompt-refiner/: SKILL.md
src/advanced_prompting_engine/: __init__.py  __main__.py  server.py
src/advanced_prompting_engine/cache/: centrality.py  embedding.py  hashing.py  tfidf.py
src/advanced_prompting_engine/data/: __init__.py  semantic_bridge.npz  semantic_vocab.json
src/advanced_prompting_engine/graph/: canonical.py  grid.py  mutation.py  query.py  schema.py  store.py
src/advanced_prompting_engine/math/: centrality.py  community.py  control_type.py  csp.py  distance.py  embedding.py  gem.py  harmonization.py  optimization.py  precedence.py  semantic.py  spoke.py  tension.py  tfidf.py
src/advanced_prompting_engine/orchestrator/: multi_pass.py
src/advanced_prompting_engine/pipeline/: construct_resolver.py  construction_bridge.py  coordinate_resolver.py  intent_parser.py  nexus_gem_analyzer.py  position_computer.py  runner.py  spoke_analyzer.py  tension_analyzer.py
src/advanced_prompting_engine/tools/: create_prompt_basis.py  explore_space.py  extend_schema.py  interpret_basis.py
tests/: test_first_principles.py
tests/test_graph/: test_canonical.py  test_grid.py  test_mutation.py  test_query.py  test_store.py
tests/test_math/: test_centrality.py  test_community.py  test_control_type.py  test_csp.py  test_distance.py  test_embedding.py  test_gem.py  test_harmonization.py  test_optimization.py  test_precedence.py  test_semantic.py  test_spoke.py  test_tension.py  test_tfidf.py
tests/test_orchestrator/: test_multi_pass.py
tests/test_pipeline/: test_intent_parser.py  test_runner.py
tests/test_tools/: test_create_prompt_basis.py  test_explore_space.py  test_extend_schema.py
