[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-prompting-engine"
version = "0.1.0"
description = "Universal prompt creation engine — MCP server with 10-axis philosophical manifold"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
advanced-prompting-engine = "advanced_prompting_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_prompting_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
