[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-prompting-engine"
version = "0.7.2"
description = "Universal prompt creation engine — MCP server with 12-axis philosophical manifold"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joshua" },
]
keywords = ["mcp", "prompt-engineering", "philosophical-manifold", "networkx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/JoshuaRamirez/advanced-prompting-engine"
Repository = "https://github.com/JoshuaRamirez/advanced-prompting-engine"
Issues = "https://github.com/JoshuaRamirez/advanced-prompting-engine/issues"
Changelog = "https://github.com/JoshuaRamirez/advanced-prompting-engine/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
build = [
    # Build-time only — used by scripts/build_semantic_bridge.py to produce
    # the shipped npz/json artifacts. Not installed for runtime consumers.
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "wordfreq>=3.0",
    "nltk>=3.8",
]

[project.scripts]
advanced-prompting-engine = "advanced_prompting_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_prompting_engine"]

[tool.hatch.build.targets.wheel.force-include]
"src/advanced_prompting_engine/data/semantic_bridge.npz" = "advanced_prompting_engine/data/semantic_bridge.npz"
"src/advanced_prompting_engine/data/semantic_vocab.json" = "advanced_prompting_engine/data/semantic_vocab.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
